--- a/src/html/scripts.html
+++ b/src/html/scripts.html
@@ -1,2 +1,2 @@
 <script src="js/app.min.js"></script>
-<script src="js/modules/bootstrap.min.js"></script>
+<script src="js/vendors/bootstrap/bootstrap.min.js"></script>
