--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
       @@include('html/section-2.html',{})
     </main>
 
+    @@include('html/svg-symbols.html',{})
     @@include('html/scripts.html',{})
   </body>
 </html>
