--- a/src/html/section-1.html
+++ b/src/html/section-1.html
@@ -1,5 +1,9 @@
-<section class="section">
+<section class="section section__main">
   <div class="container">
     <h1>Code Combat</h1>
+
+    <div class="image-wrapper">
+      <img class="main-section__img" src="./img/hero_image.png" alt="front vs js">
+    </div>
   </div>
 </section>
