first section rename

--- a/src/html/section-1.html
+++ b/src/html/section-1.html
@@ -1,9 +1,9 @@
-<section class="section section__main">
+<section class="section section__hero hero">
   <div class="container">
-    <h1>Code Combat</h1>
+    <h1 class="hero__title">Code Combat</h1>
 
-    <div class="image-wrapper">
-      <img class="main-section__img" src="./img/hero_image.png" alt="front vs js">
+    <div class="hero__image-wrapper">
+      <img class="hero__img" src="./img/hero_image.png" alt="front vs js">
     </div>
   </div>
 </section>
