--- a/src/html/section-2.html
+++ b/src/html/section-2.html
@@ -1,3 +1,36 @@
 <section class="section section__events events">
-  <h2>events</h2>
+  <div class="container">
+    <h1 class="events__title section__title">Party</h1>
+  </div>
+  
+  <div class="container">
+    <div class="row gy-2 gx-3">
+      <div class="col-4">
+        <div class="events__item event-card">
+          <div class="event-card__image">
+            <img src="./img/23.png" alt="23">
+          </div>
+
+          <div class="event-card__title">
+            February 23
+          </div>
+
+          <div class="event-card__content">
+            <div class="event-card__main-content">
+              Convenient, secure access and rewarding features such as cash back deals.
+            </div>
+
+            <div class="event-card__learn-more-wrapper">
+              <a href="#" class="event-card__learn-more">
+                <span>Learn More</span>
+                <svg>
+                  <use href="#arrow-right"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
