--- a/src/html/section-1.html
+++ b/src/html/section-1.html
@@ -2,8 +2,12 @@
   <div class="container">
     <h1 class="hero__title section__title">Code Combat</h1>
 
-    <div class="hero__image-wrapper">
-      <img class="hero__img" src="./img/hero_image.png" alt="front vs js">
+    <div class="row">
+      <div class="col-12">
+        <div class="hero__image-wrapper">
+          <img class="hero__img" src="./img/hero_image.png" alt="front vs js">
+        </div>
+      </div>
     </div>
   </div>
 </section>
