--- a/src/html/section-2.html
+++ b/src/html/section-2.html
@@ -5,7 +5,7 @@
   
   <div class="container">
     <div class="row gy-2 gx-3">
-      <div class="col-4">
+      <div class="col-12 col-md-6 col-lg-4">
         <div class="events__item event-card">
           <div class="event-card__image">
             <img src="./img/23.png" alt="23">
@@ -17,7 +17,7 @@
 
           <div class="event-card__content">
             <div class="event-card__main-content">
-              Convenient, secure access and rewarding features such as cash back deals.
+              Convenient, secure access and rewarding<br>features such as cash back deals.
             </div>
 
             <div class="event-card__learn-more-wrapper">
@@ -31,6 +31,142 @@
           </div>
         </div>
       </div>
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="events__item event-card">
+          <div class="event-card__image">
+            <img src="./img/halloween.png" alt="halloween">
+          </div>
+
+          <div class="event-card__title">
+            Halloween
+          </div>
+
+          <div class="event-card__content">
+            <div class="event-card__main-content">
+              Convenient, secure access and rewarding<br>features such as cash back deals.
+            </div>
+
+            <div class="event-card__learn-more-wrapper">
+              <a href="#" class="event-card__learn-more">
+                <span>Learn More</span>
+                <svg>
+                  <use href="#arrow-right"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="events__item event-card">
+          <div class="event-card__image">
+            <img src="./img/pinkparty.png" alt="pinkparty">
+          </div>
+
+          <div class="event-card__title">
+            Pink Party
+          </div>
+
+          <div class="event-card__content">
+            <div class="event-card__main-content">
+              Convenient, secure access and rewarding<br>features such as cash back deals.
+            </div>
+
+            <div class="event-card__learn-more-wrapper">
+              <a href="#" class="event-card__learn-more">
+                <span>Learn More</span>
+                <svg>
+                  <use href="#arrow-right"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="events__item event-card">
+          <div class="event-card__image">
+            <img src="./img/mafia_dvij.png" alt="mafia_dvij">
+          </div>
+
+          <div class="event-card__title">
+            Mafia Party
+          </div>
+
+          <div class="event-card__content">
+            <div class="event-card__main-content">
+              Convenient, secure access and rewarding<br>features such as cash back deals.
+            </div>
+
+            <div class="event-card__learn-more-wrapper">
+              <a href="#" class="event-card__learn-more">
+                <span>Learn More</span>
+                <svg>
+                  <use href="#arrow-right"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="events__item event-card">
+          <div class="event-card__image">
+            <img src="./img/hawai.png" alt="hawai">
+          </div>
+
+          <div class="event-card__title">
+            Hawaiian Party
+          </div>
+
+          <div class="event-card__content">
+            <div class="event-card__main-content">
+              Convenient, secure access and rewarding<br>features such as cash back deals.
+            </div>
+
+            <div class="event-card__learn-more-wrapper">
+              <a href="#" class="event-card__learn-more">
+                <span>Learn More</span>
+                <svg>
+                  <use href="#arrow-right"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="events__item event-card">
+          <div class="event-card__image">
+            <img src="./img/company_birthday.png" alt="company_birthday">
+          </div>
+
+          <div class="event-card__title">
+            Company birthday
+          </div>
+
+          <div class="event-card__content">
+            <div class="event-card__main-content">
+              Convenient, secure access and rewarding<br>features such as cash back deals.
+            </div>
+
+            <div class="event-card__learn-more-wrapper">
+              <a href="#" class="event-card__learn-more">
+                <span>Learn More</span>
+                <svg>
+                  <use href="#arrow-right"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     </div>
   </div>
 </section>
