--- a/src/html/section-2.html
+++ b/src/html/section-2.html
@@ -5,7 +5,7 @@
   
   <div class="container">
     <div class="row gy-2 gx-3">
-      <div class="col-12 col-md-6 col-lg-4">
+      <div class="col-12 col-md-6 col-xl-4">
         <div class="events__item event-card">
           <div class="event-card__image">
             <img src="./img/23.png" alt="23">
@@ -32,7 +32,7 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-6 col-lg-4">
+      <div class="col-12 col-md-6 col-xl-4">
         <div class="events__item event-card">
           <div class="event-card__image">
             <img src="./img/halloween.png" alt="halloween">
@@ -59,7 +59,7 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-6 col-lg-4">
+      <div class="col-12 col-md-6 col-xl-4">
         <div class="events__item event-card">
           <div class="event-card__image">
             <img src="./img/pinkparty.png" alt="pinkparty">
@@ -86,7 +86,7 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-6 col-lg-4">
+      <div class="col-12 col-md-6 col-xl-4">
         <div class="events__item event-card">
           <div class="event-card__image">
             <img src="./img/mafia_dvij.png" alt="mafia_dvij">
@@ -113,7 +113,7 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-6 col-lg-4">
+      <div class="col-12 col-md-6 col-xl-4">
         <div class="events__item event-card">
           <div class="event-card__image">
             <img src="./img/hawai.png" alt="hawai">
@@ -140,7 +140,7 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-6 col-lg-4">
+      <div class="col-12 col-md-6 col-xl-4">
         <div class="events__item event-card">
           <div class="event-card__image">
             <img src="./img/company_birthday.png" alt="company_birthday">
