--- a/src/html/section-1.html
+++ b/src/html/section-1.html
@@ -1,5 +1,13 @@
 <section class="section section__hero hero">
   <div class="container">
+    <div class="svg-lines animate">
+      <svg width="524" height="206" viewBox="0 0 524 206" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M520 5H258.75H129.875H92.5147C87.6702 5 82.9904 6.75836 79.3446 9.94847L7.82991 72.5238C3.48961 76.3216 1 81.8081 1 87.5754V182C1 193.046 9.9543 202 21 202H34.5" stroke="#810026" stroke-width="2"/>
+        <circle class="circle circle--upper" cx="519" cy="5" r="5" fill="#810026"/>
+        <circle class="circle circle--lower" cx="33" cy="201" r="5" fill="#810026"/>
+      </svg>
+    </div>
+
     <h1 class="hero__title section__title">Code Combat</h1>
 
     <div class="row">
