--- a/src/html/section-2.html
+++ b/src/html/section-2.html
@@ -1,4 +1,22 @@
 <section class="section section__events events">
+  <div class="">
+    <div class="svg-lines svg-lines--right">
+      <svg width="607" height="278" viewBox="0 0 607 278" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M572 4.00016L585.5 4.00015C596.546 4.00015 605.5 12.9544 605.5 24.0001L605.5 119.599C605.5 124.676 603.57 129.562 600.1 133.268L545.427 191.669C541.646 195.708 536.36 198 530.827 198L467.5 198L346.387 198C340.44 198 334.802 200.647 331.002 205.222L280.498 266.029C276.698 270.604 271.06 273.251 265.113 273.251L5 273.251" stroke="#810026" stroke-width="2"/>
+        <circle class="circle circle--upper" cx="573.5" cy="5" r="5" transform="rotate(180 573.5 5)" fill="#810026"/>
+        <circle class="circle circle--lower" cx="5" cy="273" r="5" fill="#810026"/>
+      </svg>
+    </div>
+
+    <div class="svg-lines svg-lines--left">
+      <svg width="607" height="172" viewBox="0 0 607 172" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="602" cy="5" r="5" fill="#810026"/>
+        <circle cx="29" cy="167" r="5" fill="#810026"/>
+        <path d="M29.5 167L21 167C9.95431 167 1.00001 158.046 1.00001 147L1.00001 75.323C1.00001 64.2773 9.95432 55.323 21 55.323L72.8717 55.323L195.758 55.323C200.522 55.323 205.129 53.6228 208.75 50.5283L256.422 9.79515C260.044 6.70073 264.651 5.00053 269.415 5.00053L601 5.00056" stroke="#810026" stroke-width="2"/>
+      </svg>
+    </div>
+  </div>
+
   <div class="container">
     <h1 class="events__title section__title">Party</h1>
   </div>
